force-app/main/default/objects/Email_Journey__c/Email_Journey__c.object-meta.xml
<CustomObject>
    <description>Tracks email campaign journeys (Welcome Series, Post-Purchase Nurture, Re-engagement). Part of the Journal Business module.</description>
    <label>Email Journey</label>
    <nameField>
        <label>Journey Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Email Journeys</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>