force-app/main/default/objects/Email_Journey__c/fields/Click_Rate__c.field-meta.xml
<CustomField>
    <fullName>Click_Rate__c</fullName>
    <label>Click Rate</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
    <description>Average email click-through rate for this journey</description>
</CustomField>