force-app/main/default/objects/Email_Journey__c/fields/Open_Rate__c.field-meta.xml
<CustomField>
    <fullName>Open_Rate__c</fullName>
    <label>Open Rate</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
    <description>Average email open rate for this journey</description>
</CustomField>