force-app/main/default/objects/Email_Journey__c/fields/Total_Emails__c.field-meta.xml
<CustomField>
    <fullName>Total_Emails__c</fullName>
    <label>Total Emails</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
    <description>Total number of emails in this journey sequence</description>
</CustomField>